--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
                         <!-- !!!!!! PLEASE HELP ME FIX THE ALIGNMENT T__T!!!!!! -->
                         <!-- Third Row  -->
                         <section id="thirdRow" class="row">
-                            <div class="col-12">
+                            <div class="thirdRowCol col-12">
                                 <article id="thirdRowBox" class="row">
                                     <ul id="unresolvedTicket" class="col-12 col-sm-6">
                                         <li class="unresolvedTicketContents ">
