--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
                                 
                                 <!-- Modal -->
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                <button id="modalBTN" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     Log out
                                 </button>
   
